--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
-title: BrainTsunamis
-subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+title: Carlson Lab
+subtitle: Decoding Spreading Depolarizations in Acute Brain Injury
+description: A website of Carlson Lab at the University of Virginia
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
