Update subtitle in configuration file

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 # site properties and page defaults
 title: Carlson Lab
-subtitle: Decoding Spreading Depolarizations in Acute Brain Injury
+subtitle: University of Virginia
 description: A website of Carlson Lab at the University of Virginia
 header: images/background.jpg
 footer: images/background.jpg
